tests/fail/recursion-infinite-1.co
//[c]This is a simple infinite recursion
//[c]
function f (x)
	f(1)
	return 1

function main
	f (1)
